--- a/web/wineweb/web/index.xhtml
+++ b/web/wineweb/web/index.xhtml
@@ -4,8 +4,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
    <f:view>
       <h:outputLabel value="Hello, world"/>
    </f:view>
+
+   <p:dataTable var="wine" value="#{data.wines}">
+      <p:column headerText="Weinname">
+         <h:outputText value="#{wine.label}"></h:outputText>
+      </p:column>
+   </p:dataTable>
 </html>
