--- a/web/wineweb/web/searchresults.xhtml
+++ b/web/wineweb/web/searchresults.xhtml
@@ -127,7 +127,7 @@
             <!--TODO Nadine bitte pro Vorschlag, also Region, Winzer, usw. ein Fieldset plus TagCloud -->
             <div class="ui-grid-row">
                 <div class="ui-grid-col-11">
-                    <p:fieldset legend="Suchvorschläge" style="margin-left: 10%">
+                    <p:fieldset legend="Ähnliche Regionen" style="margin-left: 10%">
                         <p:tagCloud model="#{data.regions}">
                             <p:ajax event="select" update="myform" listener="#{data.onRegionSelect}" />
                         </p:tagCloud>
