--- a/web/wineweb/web/searchresults.xhtml
+++ b/web/wineweb/web/searchresults.xhtml
@@ -5,7 +5,8 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 <h:head>
 
 </h:head>
@@ -26,9 +27,8 @@
     <p:outputPanel>
         <div class="ui-grid">
             <div class="ui-grid-row">
-                <div class="ui-grid-col-11">
-
-                    <h:form id="myform" style="margin-left: 10%">
+                <div class="ui-grid-col-11" style="margin-left:5%">
+                    <h:form id="myform">
                         <p:dataTable var="wine"
                                      id="singleDT"
                                      widgetVar="wineTable"
@@ -126,12 +126,65 @@
             <div>&nbsp;</div>
             <!--TODO Nadine bitte pro Vorschlag, also Region, Winzer, usw. ein Fieldset plus TagCloud -->
             <div class="ui-grid-row">
-                <div class="ui-grid-col-11">
-                    <p:fieldset legend="Ähnliche Regionen" style="margin-left: 10%">
-                        <p:tagCloud model="#{data.regions}">
-                            <p:ajax event="select" update="myform" listener="#{data.onRegionSelect}" />
-                        </p:tagCloud>
-                    </p:fieldset>
+                <div class="ui-grid-col-11" style="margin-left: 5%">
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Andere Regionen">
+                            <div align="center">
+                                <p:tagCloud model="#{data.regions}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onRegionSelect}"/>
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Andere Orte">
+                            <div align="center">
+                                <p:tagCloud model="#{data.locality}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onLocalitySelect}" />
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Andere Winzer">
+                            <div align="center">
+                                <p:tagCloud model="#{data.growers}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onGrowerSelect}" />
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
+                </div>
+            </div>
+            <div class="ui-grid-row">
+                <div class="ui-grid-col-11" style="margin-left: 5%">
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Synonyme">
+                            <div align="center">
+                                <p:tagCloud model="#{data.synonyms}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onSynonymSelect}" />
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Superklasse">
+                            <div align="center">
+                                <p:tagCloud model="#{data.superClass}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onSuperclassSelect}" />
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
+                    <div class="ui-grid-col-4">
+                        <p:fieldset legend="Subklasse">
+                            <div align="center">
+                                <p:tagCloud model="#{data.subClass}">
+                                    <p:ajax event="select" update="myform" listener="#{data.onSubclassSelect}" />
+                                </p:tagCloud>
+                            </div>
+                        </p:fieldset>
+                    </div>
                 </div>
             </div>
         </div>
